--- a/templates/therapy/stub/list.html.twig
+++ b/templates/therapy/stub/list.html.twig
@@ -31,7 +31,11 @@
 		</div>
 
 
-
+        <div class="mb-3 text-center">
+            <a href="{{ path('app_therapy_stubs_list', {'showDeleted': not showDeleted}) }}" class="btn btn-secondary">
+                {{ showDeleted ? 'Hide Deleted Stubs' : 'Show Deleted Stubs' }}
+            </a>
+        </div>
 
         <table id="stubsTable" class="table table-striped">
             <thead>
