--- a/templates/therapy/scheme/edit.html.twig
+++ b/templates/therapy/scheme/edit.html.twig
@@ -132,9 +132,12 @@
 
 <script>
 
-
 	document.addEventListener('DOMContentLoaded', function() {
-		// Initialize Sortable for each table body
+		initializeSortableForTables();
+	});
+
+	// Function to initialize Sortable for each tbody
+	function initializeSortableForTables() {
 		const tbodyElements = document.querySelectorAll('.sortable');
 
 		tbodyElements.forEach(tbody => {
@@ -147,7 +150,41 @@
 				preventOnFilter: true,
 			});
 		});
-	});
+	}
+	
+	function getStubsOrder() {
+		// Get all tbody elements with the class 'sortable'
+		const tbodyElements = document.querySelectorAll('tbody.sortable');
+
+		const labelOrderArray = []; // Define an array to store JSON representations
+
+		tbodyElements.forEach(tbody => {
+			// Get all rows in the current tbody
+			const rows = Array.from(tbody.children);
+
+			const labelOrderMap = new Map(); // Define a map for each tbody
+
+			rows
+				.filter((_, index) => index !== 0) // Skip the first row
+				.forEach(function(row) {
+					const match = row.id.match(/rowLabel\|(\d+)\|stub\|(\d+)/);
+					const labelId = match[1];
+					const stubId = match[2];
+
+					if (!labelOrderMap.has(labelId)) {
+						labelOrderMap.set(labelId, []);
+					}
+
+					labelOrderMap.get(labelId).push(stubId);
+				});
+
+			// Convert labelOrderMap to JSON and push it to labelOrderArray
+			labelOrderArray.push([...labelOrderMap]);
+		});
+
+		// Return the array if needed
+		return labelOrderArray;
+	}
 
 	let selectedLabels = [];
 	$(document).ready(function () {
@@ -169,10 +206,11 @@
 
 					const currentComments = getCurrentComments();
 					const notCheckedCheckboxes = getNotCheckedCheckboxes();
+					const stubsOrder = getStubsOrder();
 					const suppress = $("#edit_therapy_scheme_suppress").is(":checked");
 					const excerpt = $("#edit_therapy_scheme_excerpt").is(":checked");
-					await generateDynamicForm(selectedValues, currentComments, notCheckedCheckboxes, suppress, excerpt);
-
+					await generateDynamicForm(selectedValues, currentComments, notCheckedCheckboxes, stubsOrder, suppress, excerpt);
+					initializeSortableForTables()
 					{# * Show/hide content #}
 					if (selectedValues.length > 0) {
 						$("#contentDisplayedWhenLabelsAreSelected").removeClass("d-none");
@@ -213,11 +251,15 @@
 	};
 
 
-	// * Generate the dynamic form
-	const generateDynamicForm = async (selectedLabels, currentComments, notCheckedCheckboxes, suppress, excerpt) => {
-		const tableBody = document.querySelector("table tbody");
+	{# ! Generate the dynamic form #}
+	const generateDynamicForm = async (selectedLabels, currentComments, notCheckedCheckboxes, stubsOrder, suppress, excerpt) => {
+		// Get all tbody elements
+		const tbodyElements = document.querySelectorAll("table tbody");
 		if (selectedLabels.length === 0) {
-			tableBody.innerHTML = "";
+			// Clear the content of all tbody elements
+			tbodyElements.forEach(tbody => {
+				tbody.remove();
+			});
 		} else {
 			const currentLanguage = "{{ app.request.locale }}";
 			const url = "{{ path('app_therapy_scheme_generateForm') }}";
@@ -226,22 +268,25 @@
 				currentLanguage,
 				currentComments,
 				notCheckedCheckboxes,
+				stubsOrder,
 				suppress,
 				excerpt
 			};
-			const response = await axios.post(url, requestBody);
-			// Create a temporary div to hold the parsed HTML
-			const tempDiv = document.createElement("div");
-			tempDiv.innerHTML = response.data;
 
-			// Extract all the <tbody> elements
-			const newTbodies = tempDiv.querySelectorAll("tbody");
+			try {
+				// Send a POST request
+				const response = await axios.post(url, requestBody);
 
-			// Replace the existing content of the table body with the new <tbody> elements
-			tableBody.innerHTML = "";
-			newTbodies.forEach((newTbody) => {
-				tableBody.appendChild(newTbody);
-			});
+				// Remove all existing tbody elements
+				tbodyElements.forEach(tbody => {
+					tbody.remove();
+				});
+
+				// Append new tbody sections from the response HTML
+				document.querySelector("table").insertAdjacentHTML('beforeend', response.data);
+			} catch (error) {
+				console.error("Error:", error);
+			}
 		}
 	};
 
@@ -368,10 +413,12 @@
 			// Get the comments and not-checked checkboxes
 			const comments = getCurrentComments();
 			const notCheckedCheckboxes = getNotCheckedCheckboxes();
+			const stubsOrder = getStubsOrder();
 
 			// Set the values of the hidden input fields
 			$("#edit_therapy_scheme_comments").val(JSON.stringify(comments));
 			$("#edit_therapy_scheme_targets").val(JSON.stringify(notCheckedCheckboxes));
+			$("#edit_therapy_scheme_stubsOrder").val(JSON.stringify(stubsOrder));
 
 			// Submit the form
 			$("#edit_create_therapy_scheme_form").submit();
