--- a/templates/therapy/scheme/create.html.twig
+++ b/templates/therapy/scheme/create.html.twig
@@ -125,9 +125,10 @@ $(document).ready(function () {
 
                 const currentComments = getCurrentComments();
                 const notCheckedCheckboxes = getNotCheckedCheckboxes();
+                const stubsOrder = getStubsOrder();
                 const suppress = $("#therapy_scheme_suppress").is(":checked");
                 const excerpt = $("#therapy_scheme_excerpt").is(":checked");
-                await generateDynamicForm(selectedValues, currentComments, notCheckedCheckboxes, suppress, excerpt);
+                await generateDynamicForm(selectedValues, currentComments, notCheckedCheckboxes, stubsOrder, suppress, excerpt);
                 initializeSortableForTables();
 
                 {# * Show/hide content #}
@@ -220,7 +221,7 @@ const getNotCheckedCheckboxes = () => {
 };
 
 {# ! Generate the dynamic form #}
-const generateDynamicForm = async (selectedLabels, currentComments, notCheckedCheckboxes, suppress, excerpt) => {
+const generateDynamicForm = async (selectedLabels, currentComments, notCheckedCheckboxes, stubsOrder, suppress, excerpt) => {
     // Get all tbody elements
     const tbodyElements = document.querySelectorAll("table tbody");
 
@@ -232,7 +233,6 @@ const generateDynamicForm = async (selectedLabels, currentComments, notCheckedCh
     } else {
         const currentLanguage = "{{ app.request.locale }}";
         const url = "{{ path('app_therapy_scheme_generateForm') }}";
-        const stubsOrder = [];
         const requestBody = {
             selectedLabels,
             currentLanguage,
@@ -261,7 +261,7 @@ const generateDynamicForm = async (selectedLabels, currentComments, notCheckedCh
 };
 
 {# ! Generate the Report #}
-const generateReport = async (selectedLabels, currentComments, notCheckedCheckboxes, suppress, excerpt) => {
+const generateReport = async (selectedLabels, currentComments, notCheckedCheckboxes, stubsOrder, suppress, excerpt) => {
     if (selectedLabels.length > 0) {
         const currentLanguage = "{{ app.request.locale }}";
         const url = "{{ path('app_therapy_scheme_generateReport') }}";
@@ -270,6 +270,7 @@ const generateReport = async (selectedLabels, currentComments, notCheckedCheckbo
             currentLanguage,
             currentComments,
             notCheckedCheckboxes,
+            stubsOrder,
             suppress,
             excerpt
         };
@@ -378,9 +379,10 @@ $(document).ready(function () {
 	$("#generatePDFButton").click(async function () {
 		const currentComments = getCurrentComments();
 		const notCheckedCheckboxes = getNotCheckedCheckboxes();
+        const stubsOrder = getStubsOrder();
 		const suppress = $("#therapy_scheme_suppress").is(":checked");
 		const excerpt = $("#therapy_scheme_excerpt").is(":checked");
-		const response = await generateReport(selectedLabels, currentComments, notCheckedCheckboxes, suppress, excerpt);
+		const response = await generateReport(selectedLabels, currentComments, notCheckedCheckboxes, stubsOrder, suppress, excerpt);
 		const responseStatus = response.status;
 		if (responseStatus === 200) {
 			const form = document.getElementById("generatePDFForm");
@@ -392,9 +394,10 @@ $(document).ready(function () {
 		e.preventDefault();
 		const currentComments = getCurrentComments();
 		const notCheckedCheckboxes = getNotCheckedCheckboxes();
+        const stubsOrder = getStubsOrder();
 		const suppress = $("#therapy_scheme_suppress").is(":checked");
 		const excerpt = $("#therapy_scheme_excerpt").is(":checked");
-		const response = await generateReport(selectedLabels, currentComments, notCheckedCheckboxes, suppress, excerpt);
+		const response = await generateReport(selectedLabels, currentComments, notCheckedCheckboxes, stubsOrder, suppress, excerpt);
 		const responseStatus = response.status;
 		if (responseStatus === 200) {
 			const generateHTMLLink = document.getElementById("generateHTMLLink");
