--- a/templates/therapy/scheme/edit.html.twig
+++ b/templates/therapy/scheme/edit.html.twig
@@ -150,10 +150,10 @@
 					selectedLabels = selectedValues;
 
 					const currentComments = getCurrentComments();
-					const notCheckedCheckboxes = getNotCheckedCheckboxes();
+					const checkedCheckboxes = getCheckedCheckboxes();
 					const suppress = $("#edit_therapy_scheme_suppress").is(":checked");
 					const excerpt = $("#edit_therapy_scheme_excerpt").is(":checked");
-					await generateDynamicForm(selectedValues, currentComments, notCheckedCheckboxes, suppress, excerpt);
+					await generateDynamicForm(selectedValues, currentComments, checkedCheckboxes, suppress, excerpt);
 
 					{# * Show/hide content #}
 					if (selectedValues.length > 0) {
@@ -182,21 +182,21 @@
 	};
 
 	// * A function that returns an array of the NOT CHECKED checkboxes
-	const getNotCheckedCheckboxes = () => {
+	const getCheckedCheckboxes = () => {
 		const checkboxes = document.querySelectorAll("input[name^='targets|labelID=']");
 
-		const notCheckedCheckboxes = [];
+		const checkedCheckboxes = [];
 		checkboxes.forEach((checkbox) => {
-			if (!checkbox.checked) {
-				notCheckedCheckboxes.push(checkbox.name);
+			if (checkbox.checked) {
+				checkedCheckboxes.push(checkbox.name);
 			}
 		});
-		return notCheckedCheckboxes;
+		return checkedCheckboxes;
 	};
 
 
 	// * Generate the dynamic form
-	const generateDynamicForm = async (selectedLabels, currentComments, notCheckedCheckboxes, suppress, excerpt) => {
+	const generateDynamicForm = async (selectedLabels, currentComments, checkedCheckboxes, suppress, excerpt) => {
 		const tableBody = document.querySelector("table tbody");
 		if (selectedLabels.length === 0) {
 			tableBody.innerHTML = "";
@@ -207,7 +207,7 @@
 				selectedLabels,
 				currentLanguage,
 				currentComments,
-				notCheckedCheckboxes,
+				checkedCheckboxes,
 				suppress,
 				excerpt
 			};
@@ -217,7 +217,7 @@
 	};
 
 	// * Generate the Report
-	const generateReport = async (selectedLabels, currentComments, notCheckedCheckboxes, suppress, excerpt) => {
+	const generateReport = async (selectedLabels, currentComments, checkedCheckboxes, suppress, excerpt) => {
 		if (selectedLabels.length > 0) {
 			const currentLanguage = "{{ app.request.locale }}";
 			const url = "{{ path('app_therapy_scheme_generateReport') }}";
@@ -225,7 +225,7 @@
 				selectedLabels,
 				currentLanguage,
 				currentComments,
-				notCheckedCheckboxes,
+				checkedCheckboxes,
 				suppress,
 				excerpt
 			};
@@ -338,11 +338,11 @@
 
 			// Get the comments and not-checked checkboxes
 			const comments = getCurrentComments();
-			const notCheckedCheckboxes = getNotCheckedCheckboxes();
+			const checkedCheckboxes = getCheckedCheckboxes();
 
 			// Set the values of the hidden input fields
 			$("#edit_therapy_scheme_comments").val(JSON.stringify(comments));
-			$("#edit_therapy_scheme_targets").val(JSON.stringify(notCheckedCheckboxes));
+			$("#edit_therapy_scheme_targets").val(JSON.stringify(checkedCheckboxes));
 
 			// Submit the form
 			$("#edit_create_therapy_scheme_form").submit();
@@ -353,10 +353,10 @@
 
 		$("#generatePDFButton").click(async function () {
 			const currentComments = getCurrentComments();
-			const notCheckedCheckboxes = getNotCheckedCheckboxes();
+			const checkedCheckboxes = getCheckedCheckboxes();
 			const suppress = $("#edit_therapy_scheme_suppress").is(":checked");
 			const excerpt = $("#edit_therapy_scheme_excerpt").is(":checked");
-			const response = await generateReport(selectedLabels, currentComments, notCheckedCheckboxes, suppress, excerpt);
+			const response = await generateReport(selectedLabels, currentComments, checkedCheckboxes, suppress, excerpt);
 			const responseStatus = response.status;
 			if (responseStatus === 200) {
 				const form = document.getElementById("generatePDFForm");
@@ -367,10 +367,10 @@
 		$("#generateHTMLButton").click(async function (e) {
 			e.preventDefault();
 			const currentComments = getCurrentComments();
-			const notCheckedCheckboxes = getNotCheckedCheckboxes();
+			const checkedCheckboxes = getCheckedCheckboxes();
 			const suppress = $("#edit_therapy_scheme_suppress").is(":checked");
 			const excerpt = $("#edit_therapy_scheme_excerpt").is(":checked");
-			const response = await generateReport(selectedLabels, currentComments, notCheckedCheckboxes, suppress, excerpt);
+			const response = await generateReport(selectedLabels, currentComments, checkedCheckboxes, suppress, excerpt);
 			const responseStatus = response.status;
 			if (responseStatus === 200) {
 				const generateHTMLLink = document.getElementById("generateHTMLLink");
