making the confirm model bolder

--- a/templates/therapy/stub/index.html.twig
+++ b/templates/therapy/stub/index.html.twig
@@ -106,7 +106,7 @@
 
                 if(notUsedInScheme) {
                     const relatedSchemesDiv = document.getElementById('relatedSchemes');
-                    relatedSchemesDiv.innerHTML = "<p>This Stub is not used in any schemes</p>";
+                    relatedSchemesDiv.innerHTML = "<h5>This Stub is not used in any schemes</h5>";
                 }
                 else {
                     confirmDeleteButton.setAttribute('disabled', 'disabled');
