Revert "Merge pull request #59 from pmeng/revert-55-MahmoudNaoum/fix/issue-51"
This reverts commit 175d76efa529b9f413ff1119ca5d8c59f29fb245, reversing
changes made to 80d81d4e56a6a314c48798c738eb93541a8fffc5.

--- a/templates/therapy/scheme/create.html.twig
+++ b/templates/therapy/scheme/create.html.twig
@@ -125,11 +125,11 @@ $(document).ready(function () {
                 selectedLabels = selectedValues;
 
                 const currentComments = getCurrentComments();
-                const notCheckedCheckboxes = getNotCheckedCheckboxes();
+                const checkedCheckboxes = getCheckedCheckboxes();
                 const stubsOrder = getStubsOrder();
                 const suppress = $("#therapy_scheme_suppress").is(":checked");
                 const excerpt = $("#therapy_scheme_excerpt").is(":checked");
-                await generateDynamicForm(selectedValues, currentComments, notCheckedCheckboxes, stubsOrder, suppress, excerpt);
+                await generateDynamicForm(selectedValues, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt);
                 initializeSortableForTables();
 
                 {# * Show/hide content #}
@@ -213,20 +213,21 @@ const getCurrentComments = () => {
 };
 
 // * A function that returns an array of the NOT CHECKED checkboxes
-const getNotCheckedCheckboxes = () => {
+const getCheckedCheckboxes = () => {
     const checkboxes = document.querySelectorAll("input[name^='targets|labelID=']");
 
-    const notCheckedCheckboxes = [];
+    const checkedCheckboxes = [];
     checkboxes.forEach((checkbox) => {
-        if (!checkbox.checked) {
-            notCheckedCheckboxes.push(checkbox.name);
+        if (checkbox.checked) {
+            checkedCheckboxes.push(checkbox.name);
         }
     });
-    return notCheckedCheckboxes;
+    return checkedCheckboxes;
 };
 
 {# ! Generate the dynamic form #}
-const generateDynamicForm = async (selectedLabels, currentComments, notCheckedCheckboxes, stubsOrder, suppress, excerpt) => {
+const generateDynamicForm = async (selectedLabels, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt) => {
+
     // Get all tbody elements
     const tbodyElements = document.querySelectorAll("table tbody");
 
@@ -242,7 +243,7 @@ const generateDynamicForm = async (selectedLabels, currentComments, notCheckedCh
             selectedLabels,
             currentLanguage,
             currentComments,
-            notCheckedCheckboxes,
+            checkedCheckboxes,
             stubsOrder,
             suppress,
             excerpt
@@ -316,7 +317,8 @@ function sortTable(tbodyId, order) {
 }
 
 {# ! Generate the Report #}
-const generateReport = async (selectedLabels, currentComments, notCheckedCheckboxes, stubsOrder, suppress, excerpt) => {
+const generateReport = async (selectedLabels, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt) => {
+
     if (selectedLabels.length > 0) {
         const currentLanguage = "{{ app.request.locale }}";
         const url = "{{ path('app_therapy_scheme_generateReport') }}";
@@ -324,7 +326,7 @@ const generateReport = async (selectedLabels, currentComments, notCheckedCheckbo
             selectedLabels,
             currentLanguage,
             currentComments,
-            notCheckedCheckboxes,
+            checkedCheckboxes,
             stubsOrder,
             suppress,
             excerpt
@@ -420,9 +422,9 @@ $(document).ready(function () {
         commentsInput.value = JSON.stringify(comments);
 
         // * Get the not checked checkboxes and set them to the hidden input
-        const notCheckedCheckboxes = getNotCheckedCheckboxes();
+        const checkedCheckboxes = getCheckedCheckboxes();
         const targetsInput = document.getElementById("therapy_scheme_targets");
-        targetsInput.value = JSON.stringify(notCheckedCheckboxes);
+        targetsInput.value = JSON.stringify(checkedCheckboxes);
 
         const stubsOrder = document.getElementById("therapy_scheme_stubsOrder");
         stubsOrder.value = JSON.stringify(getStubsOrder());
@@ -433,11 +435,11 @@ $(document).ready(function () {
 
 	$("#generatePDFButton").click(async function () {
 		const currentComments = getCurrentComments();
-		const notCheckedCheckboxes = getNotCheckedCheckboxes();
-        const stubsOrder = getStubsOrder();
+		const checkedCheckboxes = getCheckedCheckboxes();
+    const stubsOrder = getStubsOrder();
 		const suppress = $("#therapy_scheme_suppress").is(":checked");
 		const excerpt = $("#therapy_scheme_excerpt").is(":checked");
-		const response = await generateReport(selectedLabels, currentComments, notCheckedCheckboxes, stubsOrder, suppress, excerpt);
+		const response = await generateReport(selectedLabels, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt);
 		const responseStatus = response.status;
 		if (responseStatus === 200) {
 			const form = document.getElementById("generatePDFForm");
@@ -448,11 +450,11 @@ $(document).ready(function () {
 	$("#generateHTMLButton").click(async function (e) {
 		e.preventDefault();
 		const currentComments = getCurrentComments();
-		const notCheckedCheckboxes = getNotCheckedCheckboxes();
-        const stubsOrder = getStubsOrder();
+		const checkedCheckboxes = getCheckedCheckboxes();
+    const stubsOrder = getStubsOrder();
 		const suppress = $("#therapy_scheme_suppress").is(":checked");
 		const excerpt = $("#therapy_scheme_excerpt").is(":checked");
-		const response = await generateReport(selectedLabels, currentComments, notCheckedCheckboxes, stubsOrder, suppress, excerpt);
+		const response = await generateReport(selectedLabels, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt);
 		const responseStatus = response.status;
 		if (responseStatus === 200) {
 			const generateHTMLLink = document.getElementById("generateHTMLLink");
