--- a/templates/therapy/scheme/edit.html.twig
+++ b/templates/therapy/scheme/edit.html.twig
@@ -211,11 +211,11 @@
 					selectedLabels = selectedValues;
 
 					const currentComments = getCurrentComments();
-					const notCheckedCheckboxes = getNotCheckedCheckboxes();
+					const checkedCheckboxes = getCheckedCheckboxes();
 					const stubsOrder = getStubsOrder();
 					const suppress = $("#edit_therapy_scheme_suppress").is(":checked");
 					const excerpt = $("#edit_therapy_scheme_excerpt").is(":checked");
-					await generateDynamicForm(selectedValues, currentComments, notCheckedCheckboxes, stubsOrder, suppress, excerpt);
+					await generateDynamicForm(selectedValues, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt);
 					initializeSortableForTables()
 					{# * Show/hide content #}
 					if (selectedValues.length > 0) {
@@ -244,21 +244,22 @@
 	};
 
 	// * A function that returns an array of the NOT CHECKED checkboxes
-	const getNotCheckedCheckboxes = () => {
+	const getCheckedCheckboxes = () => {
 		const checkboxes = document.querySelectorAll("input[name^='targets|labelID=']");
 
-		const notCheckedCheckboxes = [];
+		const checkedCheckboxes = [];
 		checkboxes.forEach((checkbox) => {
-			if (!checkbox.checked) {
-				notCheckedCheckboxes.push(checkbox.name);
+			if (checkbox.checked) {
+				checkedCheckboxes.push(checkbox.name);
 			}
 		});
-		return notCheckedCheckboxes;
+		return checkedCheckboxes;
 	};
 
 
 	{# ! Generate the dynamic form #}
-	const generateDynamicForm = async (selectedLabels, currentComments, notCheckedCheckboxes, stubsOrder, suppress, excerpt) => {
+	const generateDynamicForm = async (selectedLabels, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt) => {
+
 		// Get all tbody elements
 		const tbodyElements = document.querySelectorAll("table tbody");
 		if (selectedLabels.length === 0) {
@@ -273,7 +274,7 @@
 				selectedLabels,
 				currentLanguage,
 				currentComments,
-				notCheckedCheckboxes,
+				checkedCheckboxes,
 				stubsOrder,
 				suppress,
 				excerpt
@@ -300,7 +301,7 @@
 	};
 
 	// * Generate the Report
-	const generateReport = async (selectedLabels, currentComments, notCheckedCheckboxes, stubsOrder, suppress, excerpt) => {
+	const generateReport = async (selectedLabels, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt) => {
 		if (selectedLabels.length > 0) {
 			const currentLanguage = "{{ app.request.locale }}";
 			const url = "{{ path('app_therapy_scheme_generateReport') }}";
@@ -308,7 +309,7 @@
 				selectedLabels,
 				currentLanguage,
 				currentComments,
-				notCheckedCheckboxes,
+				checkedCheckboxes,
 				stubsOrder,
 				suppress,
 				excerpt
@@ -472,12 +473,12 @@
 
 			// Get the comments and not-checked checkboxes
 			const comments = getCurrentComments();
-			const notCheckedCheckboxes = getNotCheckedCheckboxes();
+			const checkedCheckboxes = getCheckedCheckboxes();
 			const stubsOrder = getStubsOrder();
 
 			// Set the values of the hidden input fields
 			$("#edit_therapy_scheme_comments").val(JSON.stringify(comments));
-			$("#edit_therapy_scheme_targets").val(JSON.stringify(notCheckedCheckboxes));
+			$("#edit_therapy_scheme_targets").val(JSON.stringify(checkedCheckboxes));
 			$("#edit_therapy_scheme_stubsOrder").val(JSON.stringify(stubsOrder));
 
 			// Submit the form
@@ -489,11 +490,11 @@
 
 		$("#generatePDFButton").click(async function () {
 			const currentComments = getCurrentComments();
-			const notCheckedCheckboxes = getNotCheckedCheckboxes();
+			const checkedCheckboxes = getCheckedCheckboxes();
 			const stubsOrder = getStubsOrder();
 			const suppress = $("#edit_therapy_scheme_suppress").is(":checked");
 			const excerpt = $("#edit_therapy_scheme_excerpt").is(":checked");
-			const response = await generateReport(selectedLabels, currentComments, notCheckedCheckboxes, stubsOrder, suppress, excerpt);
+			const response = await generateReport(selectedLabels, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt);
 			const responseStatus = response.status;
 			if (responseStatus === 200) {
 				const form = document.getElementById("generatePDFForm");
@@ -504,11 +505,11 @@
 		$("#generateHTMLButton").click(async function (e) {
 			e.preventDefault();
 			const currentComments = getCurrentComments();
-			const notCheckedCheckboxes = getNotCheckedCheckboxes();
+			const checkedCheckboxes = getCheckedCheckboxes();
 			const stubsOrder = getStubsOrder();
 			const suppress = $("#edit_therapy_scheme_suppress").is(":checked");
 			const excerpt = $("#edit_therapy_scheme_excerpt").is(":checked");
-			const response = await generateReport(selectedLabels, currentComments, notCheckedCheckboxes, stubsOrder, suppress, excerpt);
+			const response = await generateReport(selectedLabels, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt);
 			const responseStatus = response.status;
 			if (responseStatus === 200) {
 				const generateHTMLLink = document.getElementById("generateHTMLLink");
