Adding the stub categories entities + Stub categories dashboard

--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -17,6 +17,9 @@
                         <a class="nav-link active" href="{{ path('app_therapy_stubs_list') }}">{{ 'app-therapy-stubs'|trans }}</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link active" href="{{ path('app_therapy_stub_categories_list') }}">{{ 'app-therapy-stub-categories'|trans }}</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" href="{{ path('app_therapy_scheme_templates_list') }}">{{ 'app-therapy-scheme-templates'|trans }}</a>
                     </li>
                 </ul>
