Adding categories to stub edit and create page

--- a/templates/therapy/stub/index.html.twig
+++ b/templates/therapy/stub/index.html.twig
@@ -26,6 +26,10 @@
                     {{ form_widget(stubForm.background)}}
                 </div>
                 <div class="mb-3">
+                    {{ form_label(stubForm.category) }}
+                    {{ form_widget(stubForm.category)}}
+                </div>
+                <div class="mb-3">
                     {{ form_row(stubForm.labels)}}
                 </div>
             </div>
